--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "vue-template-compiler": "^2.6.11",
-    "node-sass": "^6.0.1",
-    "sass-loader": "^10.1.1"
+    "vue-router": "^3.5.2",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^9.0.3",
+    "pug": "^3.0.2",
+    "pug-plain-loader": "^1.1.0"
   },
   "eslintConfig": {
     "root": true,
