--- a/app.yaml
+++ b/app.yaml
@@ -3,7 +3,11 @@ handlers:
   - url: /(.*\..+)$
     static_files: dist/\1
     upload: dist/(.*\..+)$
+    secure: always
+    redirect_http_response_code: 301
   - url: /.*
     static_files: dist/index.html
     upload: dist/index.html
+    secure: always
+    redirect_http_response_code: 301
 default_expiration: "1m"
