--- a/.gitconfig
+++ b/.gitconfig
@@ -2,4 +2,4 @@
    name = bcemehob
    email = bagum.cemehob@gmail.com
 [credential]
-   helper = store --file ./.git-credentials
+   helper = store --file .git-credentials
